tests/src/frontend/syntax/invalid/nested_missing_close.sk
fun main(): String {
  List[
    {
      (
        x match {
        | (a, (b, c)) -> {
          List[
            e
          ]
        }
      )
    }
  ]
}
